samples/_failures_safe/1761594751_916705_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab605b04.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ab605b04.c:178:16: error: expected expression at end of input
  178 |                token->line,
      |                ^~~~~
./samples/SAFE/__tmp_ab605b04.c:178:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab605b04.c:178:16: error: expected declaration or statement at end of input
